--- a/static/css/site.css
+++ b/static/css/site.css
@@ -1650,6 +1650,13 @@ section {
   }
 }
 
+.text-block--home {
+  color: #f1efb2;
+  font-family: "Mercury Text G1 A", "Mercury Text G1 B", "Georgia", "serif";
+  font-size: 1.5625rem;
+  line-height: 1.666;
+}
+
 .text-block--primary {
   display: block;
   display: -webkit-flex;
@@ -1701,7 +1708,6 @@ section {
 }
 
 .text-block--primary-subtitle {
-  font-size: 1.95313rem;
   color: #f1efb2;
   font-family: "Mercury Text G1 A", "Mercury Text G1 B", "Georgia", "serif";
   font-size: 1.5625rem;
@@ -1732,7 +1738,7 @@ section {
 .text-block--tertiary {
   font-size: 12px;
   background-color: #eee809;
-  padding: 2.499rem;
+  padding: 0.833rem;
 }
 .text-block--tertiary a {
   color: #c7462a;
